Use a hashtable instead of searching an array, to make RemoveBidiContinuation() not be O(n^2). Bug 212827, r+sr=bzbarsky.